testdata/baselines/reference/submodule/conformance/jsDeclarationsExportAssignmentExpressionPlusSecondary.errors.txt
index.js(5,1): error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
index.js(5,1): error TS2309: An export assignment cannot be used in a module with other exported elements.
index.js(12,1): error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.


==== index.js (3 errors) ====
    const Strings = {
        a: "A",
        b: "B"
    };
    module.exports = {
    ~~~~~~
!!! error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
    ~~~~~~~~~~~~~~~~~~
        thing: "ok",
    ~~~~~~~~~~~~~~~~
        also: "ok",
    ~~~~~~~~~~~~~~~
        desc: {
    ~~~~~~~~~~~
            item: "ok"
    ~~~~~~~~~~~~~~~~~~
        }
    ~~~~~
    };
    ~
!!! error TS2309: An export assignment cannot be used in a module with other exported elements.
    module.exports.Strings = Strings;
    ~~~~~~
!!! error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
    